2021-09-09 Luciano Nicastro <luciano.nicastro@inaf.it>, ver. 0.3.3
	- email field increased from 50 to 200 chars to allow for multiple
	comma separated addresses. affected files: create_myro.sql and udf.sql

2019-09-04 Luciano Nicastro <luciano.nicastro@inaf.it>, ver. 0.3.3
	- Updated documentation and cleaning.

2019-05-31 Luciano Nicastro <luciano.nicastro@inaf.it>, ver. 0.3.2-alpha4
	- Update libmyro.cc to manage MySQL versions > 5.1.
	- Porting to GitHub.

2011-06-09 Luciano Nicastro <nicastro@iasfbo.inaf.it>, ver. 0.3.2-alpha3
	- Correctly manage shared lib. extension -> .dylib for Darwin.

2011-02-18 Luciano Nicastro <nicastro@iasfbo.inaf.it>, ver. 0.3.2-alpha3
	- Added procedure myro.rows_count (see sql/udf.sql).

2008-02-23 Giorgio Calderone <gcalderone@ifc.inaf.it>, ver. 0.3.2-alpha3
	- Bug fix.

2008-02-07  Giorgio Calderone <gcalderone@ifc.inaf.it>, ver. 0.3.2-alpha2
	- Fixed a bug due to a change in the way MySQL calls external
	functions.

	- Fixed a bug during creation of extended views.

2007-11-11  Giorgio Calderone <gcalderone@ifc.inaf.it>, ver. 0.3.2-alpha1
	- First release of MYRO as a standalone package, until now it has
	been a part of the MCS project.
	
2007-01-09  Giorgio Calderone <gcalderone@ifc.inaf.it>, ver. 0.1.1
	- MyRO: the query behind the view are now simpler, thanks to the
	new features of MySQL's optimizer;

	- The "--remprotect" option of the script "myro" no longer drops
	the fields my_uid, my_gid and my_perm from the protected table,
	while the "--protect" option no longer fails when this fields
	already exists. These behaviours allows to recreate the views for
	a table without any loss of information;

	- MyRO will no longer rename a table to protect it, and the names
	of the view to access a protected table are no longer
	hardcoded. For this reason the "--protect" option named above
	requires now an extra parameter that is just the name of the views
	to be created;
